--- a/index.html
+++ b/index.html
@@ -2,10 +2,128 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi sitio de prueba</title>
+  <title>Daniela Zegarra Zegarra</title>
+
+  <style>
+    /* --- Estilos generales --- */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #fffafc; /* Fondo suave */
+      color: #333;
+    }
+
+    /* --- Encabezado (rectángulo rosado) --- */
+    header {
+      background-color: #ffb6c1; /* Rosa pastel */
+      color: #ffffff;
+      text-align: center;
+      padding: 50px 20px;
+      font-size: 48px;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      border-radius: 0 0 25px 25px;
+    }
+
+    /* --- Contenido principal --- */
+    main {
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    /* --- Subtítulos --- */
+    h2 {
+      color: #cc1a70; /* Rosa fuerte */
+      font-size: 32px;
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+
+    /* --- Descripción personal --- */
+    p {
+      font-size: 20px;
+      max-width: 700px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+
+    /* --- Listas generales --- */
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0 auto;
+      max-width: 400px;
+      text-align: left;
+    }
+
+    ul li {
+      background-color: #ffe6f0; /* Fondo rosado suave */
+      margin: 10px 0;
+      padding: 12px 18px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    /* --- Íconos decorativos --- */
+    .icon {
+      font-size: 22px;
+    }
+
+    /* --- Espacios vacíos --- */
+    .placeholder {
+      height: 100px; /* espacio visible */
+      background-color: #fff5f9;
+      border: 2px dashed #ffb6c1;
+      border-radius: 15px;
+      margin: 20px auto;
+      width: 70%;
+      max-width: 500px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>¡Hola, mundo!</h1>
-  <p>Esto es una prueba para ver si GitHub Pages funciona.</p>
+  <!-- Encabezado -->
+  <header>Daniela Zegarra Zegarra</header>
+
+  <!-- Contenido principal -->
+  <main>
+    <h2>Acerca de mí</h2>
+    <p>
+      Soy Daniela Zegarra Zegarra y actualmente estoy cursando el tercer semestre
+      de la carrera de Administración de Empresas en la Universidad Católica San Pablo.
+    </p>
+
+    <h2>Formación</h2>
+    <ul>
+      <li><span class="icon">🎓</span> Colegio San Joaquín</li>
+      <li><span class="icon">🏛️</span> Universidad Católica San Pablo (Actualidad)</li>
+    </ul>
+
+    <h2>Aptitudes</h2>
+    <ul>
+      <li><span class="icon">💖</span> Amorosa</li>
+      <li><span class="icon">🌱</span> Perseverante</li>
+      <li><span class="icon">🤝</span> Me gusta el trabajo en equipo</li>
+    </ul>
+
+    <h2>Actualmente estoy cursando</h2>
+    <ul>
+      <li><span class="icon">📘</span> Cálculo en una variable</li>
+      <li><span class="icon">💻</span> Pensamiento computacional</li>
+      <li><span class="icon">📖</span> Historia occidental I</li>
+      <li><span class="icon">📊</span> Costos y presupuestos</li>
+    </ul>
+
+    <h2>Contactos</h2>
+    <div class="placeholder"></div>
+
+    <h2>Redes</h2>
+    <div class="placeholder"></div>
+  </main>
 </body>
 </html>
